OPH-1698 Osaamisalat accordioniksi

--- a/app/frontend/src/sass/main.scss
+++ b/app/frontend/src/sass/main.scss
@@ -26,6 +26,7 @@
 /* NÄKYMÄT
 ------------------------------------------------------------------------------*/
 @import "views/_arviointi";
+@import "views/_osienvalinta";
 
 /* MQ
 ------------------------------------------------------------------------------*/
