--- a/app/frontend/src/template/direktiivit/osalista.html
+++ b/app/frontend/src/template/direktiivit/osalista.html
@@ -2,7 +2,7 @@
   <h3 ng-if="(tutkinnonosat | filter: {tyyppi: tyyppi}).length" translate="{{otsikko}}"></h3>
   <div ng-repeat="osa in tutkinnonosat | filter: {tyyppi: tyyppi}" class="checkbox">
     <label>
-      <input type="checkbox" ng-model="valinnat[osa.osatunnus]">
+      <input type="checkbox" ng-model="valinnat[osaamisala][osa.osatunnus]">
       {{ osa | lokalisoiKentta:'nimi' }}
     </label>
   </div>
