--- a/app/frontend/src/template/raportti/raportti.html
+++ b/app/frontend/src/template/raportti/raportti.html
@@ -17,7 +17,7 @@
   <div class="panel-body">
 
     <div class="hidden-print pull-right">
-      {{ 'raportti.paivays' | translate }}: {{ paivays | date: 'dd.MM.yyyy hh:mm' }}
+      {{ 'raportti.paivays' | translate }}: {{ paivays | date: 'dd.MM.yyyy HH:mm' }}
     </div>
 
     <h2>
