--- a/app/frontend/src/template/raportti/raportti.html
+++ b/app/frontend/src/template/raportti/raportti.html
@@ -20,26 +20,41 @@
       {{ 'raportti.paivays' | translate }}: {{ paivays | date: 'dd.MM.yyyy HH:mm' }}
     </div>
 
+    <p>
+        <div class="visible-print">
+        {{ vapaatekstiprint }}
+        </div>
+    </p>
     <h2>
       <span ng-bind="raportti | lokalisoiKentta:'tutkinto_nimi'"></span>
     </h2>
     <p ng-bind-html="'raportti.otsikko_ohje' | translate | linky"></p>
 
-    <div class="row hidden-p rint">
+
+    <div class="pull-right" id="vapaateksti_tulostus_div" style="display: none;">
+        <div class="hidden-print">{{ 'raportti.vapaateksti_otsikko' | translate }}</div>
+        <div><textarea class="hidden-print" ng-model="vapaatekstiprint" rows="5" cols="60" id="vapaateksti_tulostus"></textarea>
+        </div>
+    </div>
+    <div class="row hidden-print">
       <div class="col-md-12">
         <div class="pull-right">
-          <form action="api/kaiku" method="post">
+           <form action="api/kaiku" method="post">
+            <button type="vapaateksti_show" class="btn btn-default" onClick="document.getElementById('vapaateksti_tulostus_div').style='display: visible;'; return false;">
+               <span>{{ 'raportti.vapaateksti_nayta' | translate }}</span>
+            </button>
+           
             <a class="btn btn-default" href="javascript:window.print()" uib-popover="{{ 'raportti.tulosta_ohje' | translate }}" popover-trigger="mouseenter">
               <span class="glyphicon glyphicon-print"></span>
               <span translate="raportti.tulosta"></span>
             </a>
             <input type="hidden" name="data" value="{{tekstiRaportti}}">
             <button class="btn btn-default" type="submit" ng-click="estaPoistumisvaroitus()" uib-popover="{{ 'raportti.lataa_tekstiraportti_ohje' | translate }}" popover-trigger="mouseenter" popover-append-to-body="true"><span class="glyphicon glyphicon-download-alt"></span> <span translate="raportti.lataa_tekstiraportti"></span></button>
-          </form>
+             </form>
         </div>
       </div>
     </div>
-
+    
     <uib-tabset>
       <uib-tab select="valittuRaportti='raportti'" heading="{{ 'yleiset.raportti' | translate }}">
         <br />
