OPH-1764. Korjattu button-type HTML-määrittelyn mukaiseksi.

--- a/app/frontend/src/template/raportti/raportti.html
+++ b/app/frontend/src/template/raportti/raportti.html
@@ -40,7 +40,7 @@
       <div class="col-md-12">
         <div class="pull-right">
            <form action="api/kaiku" method="post">
-            <button type="vapaateksti_show" class="btn btn-default" 
+            <button type="button" class="btn btn-default" 
                 uib-popover="{{ 'raportti.vapaateksti_ohje' | translate }}" popover-trigger="mouseenter"
                 onClick="document.getElementById('vapaateksti_tulostus_div').style='display: visible;'; return false;">
                <span>{{ 'raportti.vapaateksti_nayta' | translate }}</span>
