--- a/app/frontend/src/template/raportti/raportti.html
+++ b/app/frontend/src/template/raportti/raportti.html
@@ -68,7 +68,7 @@
         <div class="pad-2-left">{{ 'raportti.tutkinnon_keskiarvo' | translate }}: <strong>{{ raportti.keskiarvo | number:2 }}</strong></div>
 
         <h3 translate="raportti.vastausprosentit"></h3>
-        <div ng-repeat="osaamisala in osaamisalat">
+        <div ng-repeat="osaamisala in osaamisalat" ng-if="onkoOsaamisalallaValittujaTutkinnonosia(osaamisala)">
           <h4>{{osaamisala | lokalisoiKentta:'nimi'}}</h4>
           <tutkinnonosa-tilastot kaikki-tutkinnonosat="osaamisala.tutkinnonosat" otsikko="{{ 'raportti.pakolliset' | translate }}" tutkinnonosat="valitutTutkinnonosat[osaamisala.osaamisalatunnus]" tyyppi="pakollinen"></tutkinnonosa-tilastot>
           <tutkinnonosa-tilastot kaikki-tutkinnonosat="osaamisala.tutkinnonosat" otsikko="{{ 'raportti.valinnaiset' | translate }}" tutkinnonosat="valitutTutkinnonosat[osaamisala.osaamisalatunnus]" tyyppi="valinnainen"></tutkinnonosa-tilastot>
